6804746: G1: guarantee(variance() > -1.0,"variance should be >= 0") (due to evacuation failure)

Under certain circumstances (evacuation failure) the pause time is not communicated to the policy and, as a result, the pause time field is not initialized properly.

Reviewed-by: jmasa